--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.SplashScreen" android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.PageOneActivity"/>
+        <activity android:name=".view.PageTwoActivity"/>
+        <activity android:name=".view.PageThreeActivity"/>
+        <activity android:name=".view.PageFourActivity"/>
+        <activity android:name=".view.PageHistoryActivity"/>
     </application>
 
 </manifest>
